# Squish-Extensions

./: .gitignore  README.md
App_squish_extensions_section_2_to_3/: CMakeLists.txt  CustomButton.qml  Main.qml  main.cpp
extensions/: ControlsExt.qml  MyExtension.qml
suite_squish_extensions_section2/: suite.conf
suite_squish_extensions_section2/shared/scripts/: names.py
suite_squish_extensions_section2/tst_controlsWithExtension/: test.py
suite_squish_extensions_section2/tst_controlsWithoutExtension/: test.py
suite_squish_extensions_section3/: suite.conf
suite_squish_extensions_section3/shared/scripts/: names.py
suite_squish_extensions_section3/tst_customTypeWithExtension/: test.py
suite_squish_extensions_section3/tst_customTypeWithoutExtension/: test.py
